# league-akari-rust

./: LICENSE  README.md  fix_rust_encoding.py  package-lock.json  package.json  todo.MD
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: client.rs  demo.rs  demo1.rs  demo2.rs  history.rs  log.rs  rank.rs  readme.md  serialize.rs  test_sgp.rs  url.rs  websocket.rs
src-tauri/src/: lib.rs
src-tauri/src/auto/: mod.rs
src-tauri/src/client/: commandinfo.rs  detect.rs  detector.rs  mod.rs  registry.rs  tests.rs
src-tauri/src/command/: asset.rs  config.rs  history.rs  info.rs  init.rs  mod.rs
src-tauri/src/core/: base.rs  mod.rs
src-tauri/src/core/app_init/: app_state.rs  init_and_clear.rs  mod.rs
src-tauri/src/core/shards/: mod.rs
src-tauri/src/error/: error.rs  log_error.rs  mod.rs
src-tauri/src/lcu/: README.md  constant.rs  https.rs  mod.rs
src-tauri/src/lcu/api/: asset.rs  champion_select.rs  game_detail.rs  match_history.rs  mod.rs  model.rs  phase.rs  session.rs  summoner.rs
src-tauri/src/logging/: config.rs  logger.rs
src-tauri/src/shared/: README.md  mod.rs
src-tauri/src/shared/constants/: README.md  common.rs  mod.rs  sgp.rs
src-tauri/src/shared/http_api/: CODE_REVIEW.md  else.md  http.rs  mod.rs  readme.md  websocket.rs
src-tauri/src/shared/init/: game_data.rs  http.rs  lcu.rs  mod.rs  process.rs  sgp.rs
src-tauri/src/shared/process/: README.md  mod.rs  tests.rs
src-tauri/src/shared/task_runner/: mod.rs  task.rs
src-tauri/src/utils/: mod.rs  process.rs  tests.rs
src-tauri/tests/: process_test.rs  sgp_api.rs
(+197 files in other folders)
