[package]
name = "tauri-app-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55.0"
sysinfo = "0.37.2"
thiserror = "2.0.17"
regex = "1.12.1"
log = "0.4.28"
env_logger = "0.11.8"
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "psapi",
    "winbase",
    "minwindef",
    "ntdef",
    "libloaderapi",
    "memoryapi",
    "winnt",
] }
